Fix upload page small UI bug on mobile

--- a/client/css/post-upload.styl
+++ b/client/css/post-upload.styl
@@ -30,6 +30,7 @@ $cancel-button-color = tomato
         .file-dropper
             font-size: 150%
             padding: 2em
+            margin: 10px
             small
                 font-size: 60%
 
